--- a/client/src/components/signup/Signup.css
+++ b/client/src/components/signup/Signup.css
@@ -20,7 +20,7 @@
   color: blue;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
-.signinpara:hover{
+.signuppara:hover{
  color: #dc2f55;
 }
 .subtitle {
