--- a/client/src/components/gallery/gallery.css
+++ b/client/src/components/gallery/gallery.css
@@ -7,7 +7,10 @@
     display: table;
     color: #fff;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    border-radius: 10%;
+    border-radius: 5%;
+}
+.uploadingapic:hover {
+    background-color: darkblue;
 }
 .modalbody {
     display: flex;
@@ -15,4 +18,9 @@
 .modalinput {
     width: 60%;
     margin-left: 10%;
+}
+.modalTitle {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-left: 20%;
+    color: rgb(82, 72, 72);
 }
