--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -2,7 +2,6 @@ html {
   height: 100%;
 }
 
-
 .login-box {
   position: absolute;
   top: 50%;
@@ -23,6 +22,12 @@ html {
 .signinpara:hover{
   color: #dc2f55;
  }
+.subtitle {
+  color: white;
+}
+.title {
+  color: white;
+}
 .login-box h2 {
   margin: 0 0 30px;
   padding: 0;
