--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -47,3 +47,9 @@ input[type="file"] {
 .userinput {
     margin-right: 100%;
 }
+.profilecardcontainer {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10%;
+    justify-content: space-around;
+}
